# soliddriver-checks

./: MANIFEST.in  README.md  get_lenovo_rpms.py  parameters.py  pyproject.toml  requirements.txt  rpm-checks.py  setup.cfg  setup.py  solid_driver_checks.py
.devcontainer/: devcontainer.json
config/: color.default.json
container_images/leap/: Dockerfile  build_image.sh  run_as_service_in_container.sh
proposal/: README.md  rpm-kabi-compatible-checks.md
solid-driver-checks/: parameters.py  solid_driver_checks.py
solid-driver-checks/utils/: data_exporter.py  data_reader.py  remote_check.py  terminal_visualizer.py
solid_driver_checks/: parameters.py
solid_driver_checks/utils/: data_reader.py  input_data.py  summary.py
src/: solid_driver_checks.py
src/solid-driver-checks/: __init__.py
src/solid-driver-checks/utils/: data_exporter.py  data_reader.py  terminal_visualizer.py
src/soliddriver-checks/config/: color.default.json
src/soliddriver-checks/utils/: data_reader.py  remote_check.py  terminal_visualizer.py
src/soliddriver_checks/: __init__.py  cli.py  config.py  reader.py  version.py
src/soliddriver_checks/api/: analysis.py  filter.py  km.py  kmp.py  raw_data.py
src/soliddriver_checks/api/km/: analysis.py  exporter.py  reader.py  remote_analysis.py
src/soliddriver_checks/api/kmp/: analysis.py
src/soliddriver_checks/api/utils/: cmd.py  remote_analysis.py
src/soliddriver_checks/cli/: cli.py  km_report.py  kmp_report.py  terminal_logs.py  xlsx_utils.py
src/soliddriver_checks/config/: soliddriver-checks.conf
src/soliddriver_checks/config/templates/: driver-checks.html.jinja  km-report.html.jinja  kmp-checks.html.jinja  rpm-checks.html.jinja  templates.xlsx
src/soliddriver_checks/scripts/: check-links.sh
src/soliddriver_checks/service/: service.py
src/soliddriver_checks/utils/: data_analysis.py  data_exporter.py  data_reader.py  remote_check.py  terminal_logs.py  terminal_visualizer.py
src/utils/: data_reader.py  terminal_visualizer.py
tests/: Dockerfile  build_env.sh  create_container_mac.sh
tests/container_env/: Dockerfile
utils/: analysis.py  checks.py  command_process.py  data_exporter.py  data_reader.py  export.py  input_data.py  remote_check.py  summary.py
(+3 files in other folders)
