[metadata]
name = solid-driver-checks
version = 0.0.4
author = Hui-Zhi Zhao
author_email = hui.zhi.zhao@suse.com
description = Check RPM(s) and Drivers information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suse/solid-driver-checks
project_urls =
    Bug Tracker = https://github.com/suse/solid-driver-checks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
