[metadata]
name = soliddriver-checks
version = 0.0.7
author = Hui-Zhi Zhao
author_email = hui.zhi.zhao@suse.com
description = Check RPM(s) and Drivers information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suse/soliddriver-checks
project_urls =
    Bug Tracker = https://github.com/suse/soliddriver-checks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.json

# [options.data_files]
# config = src/soliddriver-checks/config/color.default.json
